[package]
name = "Crabby"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dotenv = "0.15.0"
rand = "0.8.5"
tracing = "0.1.37"
tracing-subscriber = "0.3.17"


[dependencies.tokio]
version = "1.21.2"
features = [
    "macros", 
    "signal", 
    "rt-multi-thread"
]

[dependencies.serenity]
default-features = true
features = [
    "builder",
    "chrono",
    "client",
    "framework",
    "gateway",
    "http",
    "model",
    "standard_framework",
    "utils",
    "rustls_backend",
    "collector",
]
version = "0.11"
